--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -3,11 +3,18 @@
     <ion-title>
       Ionic Blank
     </ion-title>
+
+    <ion-buttons right>
+      <button ion-button icon-only (click)="openAlertNewUser()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
+
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
+  
   <p>
     Cuestionario de Acceso a Medicamentos Controlados
   </p>
@@ -17,15 +24,40 @@
 
     <ion-label>User</ion-label>
     <ion-item>
-      <ion-input type="text" [(ngModel)]="user.user" name="user"></ion-input>
+      <ion-input type="text" [(ngModel)]="user1.user" name="user1"></ion-input>
     </ion-item>
 
     <ion-label>Password</ion-label>
     <ion-item>
-      <ion-input type="password" [(ngModel)]="user.password" name="password"></ion-input>
+      <ion-input type="password" [(ngModel)]="user1.password" name="password"></ion-input>
     </ion-item>
 
 
     <button ion-button type="submit" block>Ingresar</button>
+
   </form>
+
+
+
+
+  <ion-list>
+    <ion-item *ngIf="users.length == 0"> 
+      Empty
+    </ion-item>
+   <ion-item-sliding *ngFor="let user of users; let i = index">
+     <ion-item >
+       <ion-label>{{ user.username }}</ion-label>
+       <ion-checkbox (ionChange)="updateUser( user, i )" [checked]="user.completed"></ion-checkbox>
+     </ion-item>
+     <ion-item-options side="right" icon-left>
+       <button ion-button color="danger" (click)="deleteUser(user, i)">
+         <ion-icon name="trash"></ion-icon>
+         Delete
+       </button>
+     </ion-item-options>
+   </ion-item-sliding>
+ </ion-list>
+
+
+
 </ion-content>
