--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,19 +1,20 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-
-    <ion-buttons right>
-      <button ion-button icon-only (click)="openAlertNewUser()">
-        <ion-icon name="add"></ion-icon>
-      </button>
-    </ion-buttons>
-
-  </ion-navbar>
+    <ion-grid class="banner" >
+        <ion-row wrap align-items-center style="height: 100%; ">
+          <ion-col style="justify-content: center; display: flex!important;">
+              <img src="assets/imgs/unodc.png">
+          </ion-col>
+          <ion-col style="justify-content: center; display: flex!important;">
+              <img src="assets/imgs/cofepris.png">
+            </ion-col>
+          <ion-col style=" width:60%;justify-content: center; display: flex!important;">
+              <img src="assets/imgs/funsalud.png" style="width:60%;">
+          </ion-col>
+        </ion-row>
+      </ion-grid>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="login-content">
   
   <p>
     Cuestionario de Acceso a Medicamentos Controlados
