--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -16,7 +16,7 @@
 
 <ion-content padding class="login-content">
   
-  <p>
+  <p class="pTitle">
     Cuestionario de Acceso a Medicamentos Controlados
   </p>
 
