--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -22,13 +22,15 @@
 
   <form (ngSubmit)="runLogin()">
     
-    <ion-label>User</ion-label>
-    <ion-item>
+      <ion-item>
+          <ion-label floating>Username</ion-label>
       <ion-input type="text" [(ngModel)]="userLogin.username" name="userLogin"></ion-input>
     </ion-item>
-
-    <ion-label>Password</ion-label>
+    <p class="pTitle" style="color:transparent;">
+        c
+      </p>    
     <ion-item>
+      <ion-label floating>Password</ion-label>
       <ion-input type="password" [(ngModel)]="userLogin.password" name="password"></ion-input>
     </ion-item>
 
