updating header img

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,7 +4,7 @@
           <ion-col style="justify-content: center; display: flex!important;">
               <img src="assets/imgs/unodc.png">
           </ion-col>
-          <ion-col style="justify-content: center; display: flex!important;">
+          <ion-col class="image" style="justify-content: center; display: flex!important;">
               <img src="assets/imgs/cofepris.png">
             </ion-col>
           <ion-col style=" width:60%;justify-content: center; display: flex!important;">
