--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -2,13 +2,13 @@
     <ion-grid class="banner" >
         <ion-row wrap align-items-center style="height: 100%; ">
           <ion-col style="justify-content: center; display: flex!important;">
-              <img src="assets/imgs/unodc.png">
+              <img style="width:90%;" src="assets/imgs/unodc.png">
           </ion-col>
           <ion-col class="image" style="justify-content: center; display: flex!important;">
-              <img src="assets/imgs/cofepris.png">
+              <img style="width:90%;" src="assets/imgs/cofepris.png">
             </ion-col>
           <ion-col style=" width:60%;justify-content: center; display: flex!important;">
-              <img src="assets/imgs/funsalud.png" style="width:60%;">
+              <img style="width:90%;" src="assets/imgs/funsalud.png" style="width:60%;">
           </ion-col>
         </ion-row>
       </ion-grid>
