common answer object for all the qstn types

--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -18,27 +18,27 @@
   <div>
     <p>
       {{question.indice}} 
-      {{question.enunciado}}
+      {{question['enunciado']}}
     </p>
   </div>
 
   <div [ngSwitch]="question.tipo_pregunta">
 
-    <!-- texto number -->
+    <!-- 1.- texto number -->
     <ion-item *ngSwitchCase=1>
       <ion-label floating>Escriba su respuesta</ion-label>
-      <ion-input type="number" [(ngModel)]="answer.text"></ion-input>
+      <ion-input type="number" [(ngModel)]="answer.int"></ion-input>
     </ion-item>
 
-    <!-- radio button  -->
-    <ion-list *ngSwitchCase=2 radio-group [(ngModel)]="answer.option" (ionChange)="radioOptionChanged();">
+    <!-- 2.- radio button  -->
+    <ion-list *ngSwitchCase=2 radio-group [(ngModel)]="answer.opt" (ionChange)="radioOptionChanged();">
       <ion-item *ngFor="let opt of question.respuestas">
         <ion-label>{{opt.enunciado}}</ion-label>
         <ion-radio [value]="opt"></ion-radio>
       </ion-item>
     </ion-list>
 
-    <!-- combo box  -->
+    <!-- 3.- combo box  -->
     <ion-list *ngSwitchCase=3>
       <ion-item *ngFor="let opt of question.respuestas">
         <ion-label>{{opt.enunciado}}</ion-label>
@@ -46,24 +46,23 @@
       </ion-item>
     </ion-list>
 
-    <!-- texto abierto -->
+    <!-- 4.- texto abierto -->
     <ion-item *ngSwitchCase=4>
       <ion-label floating>Escriba su respuesta</ion-label>
-      <ion-textarea elastic type="text" [(ngModel)]="answer.text"></ion-textarea>
+      <ion-textarea elastic type="text" [(ngModel)]="answer.txt"></ion-textarea>
     </ion-item>
 
-    <!-- opcion multiple con pondereaciones -->
+    <!-- 5.- opcion multiple con pondereaciones -->
     <ion-grid *ngSwitchCase=5>
-      <ion-row *ngFor="let opt of question.respuestas">
+      <ion-row *ngFor="let opt of question.respuestas; let i = index">
         <ion-col>
           <ion-item>
             <ion-label>{{opt.enunciado}}</ion-label>
-            <ion-checkbox item-start></ion-checkbox>
           </ion-item>
         </ion-col>
         <ion-col>
           <div>
-            <ion-input placeholder="0"></ion-input>
+            <ion-input placeholder="0" [(ngModel)]="answer[opt.enunciado]" ></ion-input>
           </div>
         </ion-col>
       </ion-row>
@@ -71,6 +70,6 @@
 
   </div>
 
-  <button ion-button block (click)="nextQuestion()" *ngIf="answer != null">Siguiente</button>
+  <button ion-button block (click)="nextQuestion()" *ngIf="(answer | json) != '{}'">Siguiente</button>
 
 </ion-content>
