--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,10 +4,10 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header style="background-color:royalblue;">
 
-  <ion-navbar style="background-color:royalblue;">
-    <ion-title>{{loggedUser.nombre}}</ion-title>
+  <ion-navbar  style="background-color:royalblue;">
+    <ion-title class="white">{{loggedUser.nombre}}</ion-title>
 
     <ion-buttons end>
       <button ion-button icon-only (click)="salir()">
@@ -24,7 +24,8 @@
 
   <ion-list>
 
-    <ion-item>
+    <ion-item
+    >
       <ion-label>Seleccione Establecimiento</ion-label>
       <ion-select [(ngModel)]="establishmentSelected" cancelText="Cancel" okText="Okay" (ionChange)="optionChanged()">
         <ion-option *ngFor="let est of establishments" [value]="est">{{est.nombre}}</ion-option>
@@ -44,7 +45,7 @@
 
 
 
-  <button style="margin-top:30px;" ion-button block (click)="startSurvey()">Iniciar Cuestionario</button>
+  <button style="margin-top:60px;" ion-button block (click)="startSurvey()">Iniciar Cuestionario</button>
 
   <p class="comment">
     Usted ha capturado 03 cuestionarios
