--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -62,7 +62,7 @@
         </ion-col>
         <ion-col>
           <div>
-            <ion-input placeholder="0" [(ngModel)]="answer[opt.enunciado]" ></ion-input>
+            <ion-input placeholder="0" [(ngModel)]="answer[opt.id]" ></ion-input>
           </div>
         </ion-col>
       </ion-row>
