color primary and displaying childs only when selected

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,9 +4,9 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header style="background-color:royalblue;">
+<ion-header >
 
-  <ion-navbar  style="background-color:royalblue;">
+  <ion-navbar color="primary">
     <ion-title class="white">{{loggedUser.nombre}}</ion-title>
 
     <ion-buttons end>
