--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,7 +14,7 @@
   </ion-grid>
 </ion-header>
 
-<ion-content padding class="login-content" style="background: url('assets/imgs/back.jpg'); margin-top=50%; background-size:100%;">
+<ion-content padding class="login-content" style="background: url('assets/imgs/back.jpg'); margin-top:50%; background-size:100%;">
 
   <p class="pTitle">
     Cuestionario de Acceso a Medicamentos Controlados
