--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -99,7 +99,7 @@
         </ion-col>
         <ion-col>
           <div>
-            <ion-input placeholder="0" [(ngModel)]="answer[opt.id]"></ion-input>
+            <ion-input autosize placeholder="0" [(ngModel)]="answer[opt.id]"></ion-input>
           </div>
         </ion-col>
       </ion-row>
