--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -86,7 +86,7 @@
     <!-- 4.- texto abierto -->
     <ion-item *ngSwitchCase=4>
       <ion-label floating>Escriba su respuesta</ion-label>
-      <ion-textarea elastic type="text" [(ngModel)]="answer.txt"></ion-textarea>
+      <ion-textarea elastic autosize type="text" [(ngModel)]="answer.txt"></ion-textarea>
     </ion-item>
 
     <!-- 5.- opcion multiple con pondereaciones -->
@@ -99,7 +99,7 @@
         </ion-col>
         <ion-col>
           <div>
-            <ion-input autosize placeholder="0" [(ngModel)]="answer[opt.id]"></ion-input>
+            <ion-input placeholder="0" [(ngModel)]="answer[opt.id]"></ion-input>
           </div>
         </ion-col>
       </ion-row>
