--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -25,7 +25,7 @@
 
     <!-- 1.- texto number -->
     <ion-item *ngSwitchCase=1>
-      <ion-label floating>Escriba su respuesta</ion-label>
+      <ion-label floating>Escriba su respuesta (Número)</ion-label>
       <ion-input type="number" [(ngModel)]="answer.int"></ion-input>
     </ion-item>
 
@@ -58,34 +58,56 @@
                 <ion-radio [value]="opt"></ion-radio>
               </ion-item>
               <ion-row *ngIf="hasChilds">
-                <ion-list radio-group ngDefaultControl [(ngModel)]="answer.optChild" (ionChange)="radioChildOptionChanged()">
-                  <ion-item *ngFor="let optChild of opt.respuestas">
-                    <ion-label class="sentence">{{optChild.enunciado}}</ion-label>
-                    <ion-radio [value]="optChild"></ion-radio>
-                  </ion-item>
-                </ion-list>
+                <!-- <ion-col>
+
+                </ion-col> -->
+                <ion-col>
+                  <div [ngSwitch]="opt.tipo_pregunta">
+
+                    <!-- 1.- texto number -->
+                    <ion-item *ngSwitchCase=1>
+                      <ion-label floating>Escriba su respuesta (Número)</ion-label>
+                      <ion-input type="number" [(ngModel)]="answer.intChild"></ion-input>
+                    </ion-item>
+
+                    <!-- 2.- radio button  -->
+                    <ion-list *ngSwitchCase=2 radio-group ngDefaultControl (ionChange)="radioChildOptionChanged()">
+                      <ion-item *ngFor="let optChild of opt.respuestas">
+                        <ion-label class="sentence">{{optChild.enunciado}}</ion-label>
+                        <ion-radio [value]="optChild"></ion-radio>
+                      </ion-item>
+                    </ion-list>
+
+                    <!-- 3.- combo box  -->
+                    <ion-list *ngSwitchCase=3>
+                      <ion-item *ngFor="let optChild of opt.respuestas">
+                        <ion-label class="sentence">{{optChild.enunciado}}</ion-label>
+                        <ion-checkbox></ion-checkbox>
+                      </ion-item>
+                    </ion-list>
+
+                    <!-- 4.- texto abierto -->
+                    <ion-item *ngSwitchCase=4>
+                      <ion-label floating>Escriba su respuesta (Texto)</ion-label>
+                      <ion-textarea elastic autosize type="text" [(ngModel)]="answer.txtChild"></ion-textarea>
+                    </ion-item>
+
+                  </div>
+                </ion-col>
               </ion-row>
             </ion-item-group>
           </ion-list>
         </ion-col>
       </ion-row>
-      <ion-row >
-        <button class="siguiente" ion-button block (click)="getPicture()">Tomar Foto</button>
+      <ion-row>
+        <button class="siguiente" ion-button block (click)="getPicture()" disabled="true">Tomar Foto</button>
         <img [src]="image" *ngIf="image" />
       </ion-row>
     </ion-grid>
 
-    <!-- 3.- combo box  -->
-    <ion-list *ngSwitchCase=3>
-      <ion-item *ngFor="let opt of question.respuestas">
-        <ion-label class="sentence">{{opt.enunciado}}</ion-label>
-        <ion-checkbox></ion-checkbox>
-      </ion-item>
-    </ion-list>
-
     <!-- 4.- texto abierto -->
     <ion-item *ngSwitchCase=4>
-      <ion-label floating>Escriba su respuesta</ion-label>
+      <ion-label floating>Escriba su respuesta (Texto)</ion-label>
       <ion-textarea elastic autosize type="text" [(ngModel)]="answer.txt"></ion-textarea>
     </ion-item>
 
