--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -92,6 +92,30 @@
                       <ion-textarea elastic autosize type="text" [(ngModel)]="answer.txtChild"></ion-textarea>
                     </ion-item>
 
+                    <!-- 5.- opcion multiple con pondereaciones -->
+                    <ion-grid *ngSwitchCase=5>
+                      <ion-row *ngFor="let opt of question.respuestas">
+                        <ion-col>
+                          <ion-item>
+                            <ion-label class="sentence">{{opt.enunciado}}</ion-label>
+                          </ion-item>
+                        </ion-col>
+                        <ion-col>
+                          <div>
+                            <ion-input placeholder="0" [(ngModel)]="answer[opt.id]"></ion-input>
+                          </div>
+                        </ion-col>
+                      </ion-row>
+                    </ion-grid>
+
+                    <!-- 6.- Texto con foto -->
+                    <ion-row>
+                      <ion-label floating>Escriba su respuesta (Texto)</ion-label>
+                      <ion-textarea elastic autosize type="text" [(ngModel)]="answer.txtChild"></ion-textarea>
+                        <button class="siguiente" ion-button block (click)="getPicture()" disabled="true">Tomar Foto</button>
+                        <img [src]="image" *ngIf="image" />
+                    </ion-row>
+
                   </div>
                 </ion-col>
               </ion-row>
@@ -99,10 +123,7 @@
           </ion-list>
         </ion-col>
       </ion-row>
-      <ion-row>
-        <button class="siguiente" ion-button block (click)="getPicture()" disabled="true">Tomar Foto</button>
-        <img [src]="image" *ngIf="image" />
-      </ion-row>
+      
     </ion-grid>
 
     <!-- 3.- combo box  -->
