--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -26,7 +26,7 @@
     <!-- 1.- texto number -->
     <ion-item *ngSwitchCase=1>
       <ion-label floating>Escriba su respuesta (Número)</ion-label>
-      <ion-input type="number" [(ngModel)]="answer.int"></ion-input>
+      <ion-input type="number" [(ngModel)]="answer.number"></ion-input>
     </ion-item>
 
     <!-- 2.- radio button  -->
@@ -51,27 +51,28 @@
     <ion-grid *ngSwitchCase=2>
       <ion-row *ngFor="let opt of question.respuestas">
         <ion-col>
-          <ion-list radio-group [(ngModel)]="answer.opt" (ionChange)="radioOptionChanged()">
+          <ion-list radio-group ngDefaultControl [(ngModel)]="answer.option" (ionChange)="radioOptionChanged()">
             <ion-item-group>
               <ion-item>
                 <ion-label class="sentence">{{opt.enunciado}}</ion-label>
                 <ion-radio [value]="opt"></ion-radio>
               </ion-item>
               <ion-row *ngIf="hasChilds">
-                <!-- <ion-col>
-
-                </ion-col> -->
                 <ion-col>
+
+                </ion-col>
+                <ion-col col-10>
+
                   <div [ngSwitch]="opt.tipo_pregunta">
 
                     <!-- 1.- texto number -->
                     <ion-item *ngSwitchCase=1>
                       <ion-label floating>Escriba su respuesta (Número)</ion-label>
-                      <ion-input type="number" [(ngModel)]="answer.intChild"></ion-input>
+                      <ion-input type="number" [(ngModel)]="answer.childText"></ion-input>
                     </ion-item>
 
                     <!-- 2.- radio button  -->
-                    <ion-list *ngSwitchCase=2 radio-group ngDefaultControl (ionChange)="radioChildOptionChanged()">
+                    <ion-list *ngSwitchCase=2 radio-group ngDefaultControl [(ngModel)]="answer.childOpt" (ionChange)="radioChildOptionChanged()">
                       <ion-item *ngFor="let optChild of opt.respuestas">
                         <ion-label class="sentence">{{optChild.enunciado}}</ion-label>
                         <ion-radio [value]="optChild"></ion-radio>
@@ -89,7 +90,7 @@
                     <!-- 4.- texto abierto -->
                     <ion-item *ngSwitchCase=4>
                       <ion-label floating>Escriba su respuesta (Texto)</ion-label>
-                      <ion-textarea elastic autosize type="text" [(ngModel)]="answer.txtChild"></ion-textarea>
+                      <ion-textarea elastic autosize type="text" [(ngModel)]="answer.childText"></ion-textarea>
                     </ion-item>
 
                     <!-- 5.- opcion multiple con pondereaciones -->
@@ -102,19 +103,32 @@
                         </ion-col>
                         <ion-col>
                           <div>
-                            <ion-input placeholder="0" [(ngModel)]="answer[opt.id]"></ion-input>
+                            <ion-input placeholder="0" [(ngModel)]="answer.childOpts[opt.id]"></ion-input>
                           </div>
                         </ion-col>
                       </ion-row>
                     </ion-grid>
 
                     <!-- 6.- Texto con foto -->
-                    <ion-row>
+                    <!-- <ion-row  *ngSwitchCase=6>
                       <ion-label floating>Escriba su respuesta (Texto)</ion-label>
                       <ion-textarea elastic autosize type="text" [(ngModel)]="answer.txtChild"></ion-textarea>
-                        <button class="siguiente" ion-button block (click)="getPicture()" disabled="true">Tomar Foto</button>
-                        <img [src]="image" *ngIf="image" />
-                    </ion-row>
+                      <button class="siguiente" ion-button block (click)="getPicture()" disabled="true">Tomar Foto</button>
+                      <img [src]="image" *ngIf="image" />
+                    </ion-row> -->
+
+                    <ion-item-group *ngSwitchCase=6>
+                      <ion-item>
+                        <ion-label floating>Escriba su respuesta (Texto)</ion-label>
+                        <ion-textarea elastic autosize type="text" [(ngModel)]="answer.imageText"></ion-textarea>
+                      </ion-item>
+                      <ion-item>
+                          <button class="siguiente" ion-button block (click)="getPicture()">Tomar Foto</button>
+                      </ion-item>
+                      <ion-item>
+                          <img [src]="image" *ngIf="image" />
+                      </ion-item>
+                    </ion-item-group>
 
                   </div>
                 </ion-col>
@@ -123,21 +137,21 @@
           </ion-list>
         </ion-col>
       </ion-row>
-      
+
     </ion-grid>
 
     <!-- 3.- combo box  -->
     <ion-list *ngSwitchCase=3>
       <ion-item *ngFor="let opt of question.respuestas">
         <ion-label class="sentence">{{opt.enunciado}}</ion-label>
-        <ion-checkbox></ion-checkbox>
+        <ion-checkbox [(ngModel)]="answer.opts"></ion-checkbox>
       </ion-item>
     </ion-list>
 
     <!-- 4.- texto abierto -->
     <ion-item *ngSwitchCase=4>
       <ion-label floating>Escriba su respuesta (Texto)</ion-label>
-      <ion-textarea elastic autosize type="text" [(ngModel)]="answer.txt"></ion-textarea>
+      <ion-textarea elastic autosize type="text" [(ngModel)]="answer.text"></ion-textarea>
     </ion-item>
 
     <!-- 5.- opcion multiple con pondereaciones -->
@@ -150,11 +164,12 @@
         </ion-col>
         <ion-col>
           <div>
-            <ion-input placeholder="0" [(ngModel)]="answer[opt.id]"></ion-input>
+            <ion-input placeholder="0" [(ngModel)]="answer.map[opt.id]"></ion-input>
           </div>
         </ion-col>
       </ion-row>
     </ion-grid>
+
 
     <!-- <ion-list *ngSwitchCase=5 >
       <ion-item *ngFor="let opt of question.respuestas">
