child multi check select

--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -72,7 +72,7 @@
                     </ion-item>
 
                     <!-- 2.- radio button  -->
-                    <ion-list *ngSwitchCase=2 radio-group ngDefaultControl [(ngModel)]="answer.childOpt" (ionChange)="radioChildOptionChanged()">
+                    <ion-list *ngSwitchCase=2 radio-group ngDefaultControl [(ngModel)]="answer.childOption" (ionChange)="radioChildOptionChanged()">
                       <ion-item *ngFor="let optChild of opt.respuestas">
                         <ion-label class="sentence">{{optChild.enunciado}}</ion-label>
                         <ion-radio [value]="optChild"></ion-radio>
@@ -80,12 +80,19 @@
                     </ion-list>
 
                     <!-- 3.- combo box  -->
-                    <ion-list *ngSwitchCase=3>
+                    <!-- <ion-list *ngSwitchCase=3>
                       <ion-item *ngFor="let optChild of opt.respuestas">
                         <ion-label class="sentence">{{optChild.enunciado}}</ion-label>
                         <ion-checkbox></ion-checkbox>
                       </ion-item>
-                    </ion-list>
+                    </ion-list> -->
+
+                    <ion-item *ngSwitchCase=3>
+                      <ion-label>Seleccione Opciones</ion-label>
+                      <ion-select [(ngModel)]="answer.childOptions" multiple="true" cancelText="Cancel" okText="Okay" (ionChange)="optionChanged()">
+                        <ion-option *ngFor="let optChild of opt.respuestas" [value]="optChild">{{optChild.enunciado}}</ion-option>
+                      </ion-select>
+                    </ion-item>
 
                     <!-- 4.- texto abierto -->
                     <ion-item *ngSwitchCase=4>
@@ -103,7 +110,7 @@
                         </ion-col>
                         <ion-col>
                           <div>
-                            <ion-input placeholder="0" [(ngModel)]="answer.childOpts[opt.id]"></ion-input>
+                            <ion-input placeholder="0" [(ngModel)]="answer.childMap[opt.id]"></ion-input>
                           </div>
                         </ion-col>
                       </ion-row>
@@ -123,10 +130,10 @@
                         <ion-textarea elastic autosize type="text" [(ngModel)]="answer.imageText"></ion-textarea>
                       </ion-item>
                       <ion-item>
-                          <button class="siguiente" ion-button block (click)="getPicture()">Tomar Foto</button>
+                        <button class="siguiente" ion-button block (click)="getPicture()">Tomar Foto</button>
                       </ion-item>
                       <ion-item>
-                          <img [src]="image" *ngIf="image" />
+                        <img [src]="image" *ngIf="image" />
                       </ion-item>
                     </ion-item-group>
 
