--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -68,7 +68,7 @@
                     <!-- 1.- texto number -->
                     <ion-item *ngSwitchCase=1>
                       <ion-label floating>Escriba su respuesta (Número)</ion-label>
-                      <ion-input type="number" [(ngModel)]="answer.childText"></ion-input>
+                      <ion-input type="number" [(ngModel)]="answer.childNumber"></ion-input>
                     </ion-item>
 
                     <!-- 2.- radio button  -->
