number for tupe 5

--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -197,7 +197,7 @@
         </ion-col>
         <ion-col>
           <div>
-            <ion-input placeholder="0" [(ngModel)]="answer.map[opt.id]"></ion-input>
+            <ion-input placeholder="0" type="number" [(ngModel)]="answer.map[opt.id]"></ion-input>
           </div>
         </ion-col>
       </ion-row>
